--- a/_prebuild/css/pages/library.scss
+++ b/_prebuild/css/pages/library.scss
@@ -14,23 +14,28 @@
 
 .book--header {
   background: #f7f7f7;
+  margin-bottom: 2rem;
   padding: 1rem;
   text-align: center;
 
   @include mq(500px) {
     position: relative;
     background: transparent;
-    padding: 0;
+    margin-bottom: 5rem; // push quote below absolutely positioned book cover
+    padding: 24px 0 0 0;
     text-align: left;
+  }
+
+  @include mq(800px) {
+    padding-top: 44px; // push heading down to top of book
+  }
+
+  .view-mode--dark & {
+    background: darken($dark-grey, 20%);
   }
 }
 
 .book--cover {
-  $width-mobile: 5rem;
-  $height-mobile: 7rem;
-  $width: 7rem;
-  $height: 10rem;
-
   position: relative;
   z-index: 0;
   background-color: $light-grey;
@@ -39,31 +44,37 @@
   background-position: 50%;
   margin: 0 auto 2rem;
   padding: 2rem;
-  @include size($width-mobile, $height-mobile);
-  @include ir;
+  @include size(5rem, 7rem);
+
+  span { // contains text for accessibility
+    @include ir;
+  }
 
   @include mq(500px) {
     position: absolute;
     top: 0;
     left: 0;
-    background-size: $width, $height;
+    background-size: 7rem, 10rem;
+    @include size(8rem, 12rem);
     margin: 0;
   }
 
+  @include mq(800px) {
+    @include size(12rem, 16rem);
+  }
+
   &:after {
-    content: '';
     display: block;
     position: absolute;
-    top: -1rem;
-    left: -1rem;
+    top: -2rem;
+    left: -2rem;
     z-index: 2;
     background: $light-grey;
-    opacity: 0.1;
-    @include size($width-mobile, $height-mobile);
-
+    opacity: 0.4;
+    @include size(8rem, 12rem);
 
     @include mq(500px) {
-      @include size($width, $height);
+      content: '';
     }
   }
 }
@@ -73,7 +84,11 @@
 .book--link {
   @include mq(500px) {
     position: relative;
-    margin-left: 100px;
+    margin-left: 13rem;
+  }
+
+  @include mq(800px) {
+    margin-left: 130px;
   }
 }
 
